--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "discord.js-commando": "git+https://github.com/discordjs/Commando.git",
-    "dotenv": "^8.2.0",
+//    "dotenv": "^8.2.0",
     "got": "^11.8.1",
     "winston": "^3.3.3"
   }
